fix recreated flickering issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3467,7 +3467,7 @@ title {
 		}
 
 		#banner > .inner {
-			transition: opacity 1.5s ease, transform 0.5s ease-out, filter 0.5s ease, -webkit-filter 0.5s ease;
+			transition: opacity 1.5s ease, transform 0.5s ease-out, filter 0.5s ease;
 			padding: 0 !important;
 			position: relative;
 			z-index: 2;
@@ -4000,4 +4000,4 @@ var modal = document.getElementById('id01');
 window.onclick = function(event) {
     if (event.target == modal) {
         modal.style.display = "none";
-		transition: opacity 1.5s ease, transform 0.5s ease-out, filter 0.5s ease, -webkit-filter 0.5s ease;
+		transition: opacity 1.5s ease, transform 0.5s ease-out, filter 0.5s ease;
